# st17h66_FindMy

./: README.md
FindMy/: CMakeLists.txt  FindMy.uvprojx  Makefile  main.c  scatter_load.sct  simpleBlePeripheral.asm  simpleBlePeripheral.uvguix.jzli  simpleBlePeripheral.uvguix.lars  simpleBlePeripheral.uvoptx  simpleBlePeripheral.uvprojx
FindMy/Listings/: simpleBlePeripheral.map  startup_armcm0.lst
FindMy/Objects/: clock.crf  clock.d  flash.crf  flash.d  fs.crf  fs.d  gap.crf  gap.d  gapgattserver.crf  gapgattserver.d  gattservapp.crf  gattservapp.d  gpio.crf  gpio.d  jump_table.crf  jump_table.d  key.crf  key.d  led_light.crf  led_light.d  main.crf  main.d  my_printf.crf  my_printf.d  osal_simplebleperipheral.crf  osal_simplebleperipheral.d  osal_snv.crf  osal_snv.d  ota_app_service.crf  ota_app_service.d  peripheral.crf  peripheral.d  pwm.crf  pwm.d  pwrmgr.crf  pwrmgr.d  sbpprofile_ota.crf  sbpprofile_ota.d  simpleBlePeripheral.axf  simpleBlePeripheral.build_log.htm  (+16 more)
FindMy/RTE/_Target_1/: RTE_Components.h
FindMy/source/: FindMy.c  OSAL_SimpleBLEPeripheral.c
components/driver/adc/: adc.c  readme.txt
components/driver/clock/: clock.c
components/driver/pwrmgr/: pwrmgr.c
components/inc/: types.h  version.h
components/profiles/ota_app/: ota_app_service.c  ota_app_service.h
misc/: bb_rom_sym_m0.txt
